# door

./: README.md  main.py  pyproject.toml
3D/: Board Holder.3mf  Camera Cover - Plate.3mf  Camera Cover - Top.3mf  Door Gear.3mf  Holder - Motor Holder.3mf  Motor Gear.3mf
DoorLib/: __init__.py  led_control.py  motor_control.py
Firmware/: platformio.ini
Firmware/src/: main.cpp
